# h264-kotlin-rust

./: .gitignore  README.md
client-h264/: gradle.properties  settings.gradle.kts
client-h264/app/: build.gradle.kts
client-h264/app/src/androidTest/java/com/example/camera_steam_obs/: ExampleInstrumentedTest.kt
client-h264/app/src/main/: AndroidManifest.xml
client-h264/app/src/main/java/com/example/camera_steam_obs/: CameraStreamer.kt  DiscoveryService.kt  MainActivity.kt  TcpSender.kt
client-h264/app/src/main/res/layout/: activity_main.xml
client-h264/app/src/main/res/values/: strings.xml  themes.xml
client-h264/app/src/test/java/com/example/camera_steam_obs/: ExampleUnitTest.kt
client-h264/gradle/: libs.versions.toml
client-h264/gradle/wrapper/: gradle-wrapper.properties
server-h264/: Cargo.toml
server-h264/src/: decoder.rs  main.rs  net.rs  renderer.rs
